--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <table class="imgtable"><tr><td>
 <img src="photo_me_2.jpg" alt="photo_me" width="190px" height="200px" />&nbsp;</td>
 <td align="left"><p>Graduate Student<br />
-EECS Department, University of California, Berkeley.</p>
+EECS Department, University of California, Berkeley</p>
 <p>7th floor, Sutardja Dai Hall, Berkeley, CA 94720.<br />  
-Email: yyu AT eecs DOT berkeley DOT edu</a>.
+Email: yyu AT eecs DOT berkeley DOT edu</a>
 
 </p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a third-year PhD student in the EECS department at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a> and <a href="http://people.eecs.berkeley.edu/~yima/">Yi Ma</a>. I obtained my B.S. from the Department of Mathematics at Nanjing University, and my M.S. from the Department of Computer Science</a>, University of Virginia. 
+<p>I am a PhD student in the EECS department at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a> and <a href="http://people.eecs.berkeley.edu/~yima/">Yi Ma</a>. I obtained my B.S. from the Department of Mathematics at Nanjing University, and my M.S. from the Department of Computer Science</a>, University of Virginia. 
 <!-- Previously, I was fortunate to work with <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a> at Nanyang Technological University.  -->
 
 </p>
@@ -50,25 +50,37 @@ My research interests include topics in machine learning and optimization. My go
 
 <!-- <h3>Conference Proceedings</h3> -->
 <ul>
-<li><p><i>ReduNet: A White-box Deep Network from the Principle of Maximizing Rate Reduction</i>.<br />
-Kwan Ho Ryan Chan*, <b>Yaodong Yu</b>*, Chong You*, Haozhi Qi, John Wright, Yi Ma (*: equal contribution). <br />  
-Journal of Machine Learning Research (JMLR), 2022. [<a href="https://arxiv.org/abs/2105.10446">arXiv</a>] [<a href="https://arxiv.org/pdf/2105.10446.pdf">PDF</a>] <br /></p>
+<li><p><i>Predicting Out-of-Distribution Error with the Projection Norm</i>.<br />
+<b>Yaodong Yu</b>*, Zitong Yang*, Alexander Wei, Yi Ma, Jacob Steinhardt (*: equal contribution). <br />  
+In Proc. of the 39th International Conference on Machine Learning (ICML'2022), 2022. [<a href="https://proceedings.mlr.press/v162/yu22i.html">Link</a>] [<a href="https://proceedings.mlr.press/v162/yu22i/yu22i.pdf">PDF</a>] [<a href="https://github.com/yaodongyu/ProjNorm">code</a>] <br /></p>
 </li>
 </ul>
 <ul>
-<li><p><i>Fast distributionally robust learning with variance reduced min-max optimization</i>.<br />
+<li><p><i>Online Nonsubmodular Minimization with Delayed Costs: From Full Information to Bandit Feedback</i>.<br />
+Tianyi Lin*, Aldo Pacchiano*, <b>Yaodong Yu</b>*, Michael I. Jordan (*: equal contribution). <br />  
+In Proc. of the 39th International Conference on Machine Learning (ICML'2022), 2022. [<a href="https://proceedings.mlr.press/v162/lin22g.html">Link</a>] [<a href="https://proceedings.mlr.press/v162/lin22g/lin22g.pdf">PDF</a>]  <br /></p>
+</li>
+</ul>
+<ul>
+<li><p><i>ReduNet: A White-box Deep Network from the Principle of Maximizing Rate Reduction</i>.<br />
+Kwan Ho Ryan Chan*, <b>Yaodong Yu</b>*, Chong You*, Haozhi Qi, John Wright, Yi Ma (*: equal contribution). <br />  
+Journal of Machine Learning Research (JMLR'2022), 2022. [<a href="https://arxiv.org/abs/2105.10446">arXiv</a>] [<a href="https://www.jmlr.org/papers/v23/21-0631.html">Link</a>] [<a href="https://arxiv.org/pdf/2105.10446.pdf">PDF</a>]  [<a href="https://github.com/Ma-Lab-Berkeley/ReduNet">code</a>] <br /></p>
+</li>
+</ul>
+<ul>
+<li><p><i>Fast Distributionally Robust Learning with Variance-Reduced Min-Max Optimization</i>.<br />
 <b>Yaodong Yu</b>*, Tianyi Lin*, Eric Mazumdar*, Michael I. Jordan (*: equal contribution). <br />  
-In Proc. of the 25nd of the International Conference on Artificial Intelligence and Statistics (AISTATS'2022), 2022. [<a href="https://arxiv.org/abs/2104.13326">arXiv</a>] [<a href="https://arxiv.org/pdf/2104.13326.pdf">PDF</a>] <br /></p>
+In Proc. of the 25nd of the International Conference on Artificial Intelligence and Statistics (AISTATS'2022), 2022. [<a href="https://proceedings.mlr.press/v151/yu22a">Link</a>] [<a href="https://proceedings.mlr.press/v151/yu22a/yu22a.pdf">PDF</a>] <br /></p>
 </li>
 </ul>
 <ul>
 <li><p><i>On the Convergence of Stochastic Extragradient for Bilinear Games with Restarted Iteration Averaging</i>.<br />
 Chris Junchi Li*, <b>Yaodong Yu</b>*, Nicolas Loizou, Gauthier Gidel, Yi Ma, Nicolas Le Roux, Michael I. Jordan (*: equal contribution). <br />  
-In Proc. of the 25nd of the International Conference on Artificial Intelligence and Statistics (AISTATS'2022), 2022. [<a href="https://arxiv.org/abs/2107.00464">arXiv</a>] [<a href="https://arxiv.org/pdf/2107.00464.pdf">PDF</a>] <br /></p>
+In Proc. of the 25nd of the International Conference on Artificial Intelligence and Statistics (AISTATS'2022), 2022. [<a href="https://proceedings.mlr.press/v151/junchi-li22a.html">Link</a>] [<a href="https://proceedings.mlr.press/v151/junchi-li22a/junchi-li22a.pdf">PDF</a>] <br /></p>
 </li>
 </ul>
 <ul>
-<li><p><i>Adversarial Robustness of Stabilized NeuralODEs Might be from Obfuscated Gradients</i>.<br />  Yifei Huang, <b>Yaodong Yu</b>, Hongyang Zhang, Yi Ma, and Yuan Yao.<br />  Mathematical and Scientific Machine Learning (MSML'2021), 2021. [<a href="https://arxiv.org/abs/2009.13145">arXiv</a>] [<a href="https://arxiv.org/pdf/2009.13145.pdf">PDF</a>] [<a href="https://github.com/yao-lab/SONet">code</a>] <br /></p>
+<li><p><i>Adversarial Robustness of Stabilized NeuralODEs Might be from Obfuscated Gradients</i>.<br />  Yifei Huang, <b>Yaodong Yu</b>, Hongyang Zhang, Yi Ma, and Yuan Yao.<br />  Mathematical and Scientific Machine Learning (MSML'2021), 2021. [<a href="https://proceedings.mlr.press/v145/huang22a.html">Link</a>] [<a href="https://proceedings.mlr.press/v145/huang22a/huang22a.pdf">PDF</a>] [<a href="https://github.com/yao-lab/SONet">code</a>] <br /></p>
 </li>
 </ul>
 <ul>
@@ -124,6 +136,8 @@ In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2
 </ul>
 <h2>Professional Experiences</h2>
 <ul>
+<li><p><b>Research Intern</b>, <a href="https://ai.facebook.com">Meta AI</a>, San Francisco, May. 2022 &ndash; Aug. 2022<br />
+</li>
 <li><p><b>Research Intern</b>, <a href="https://research.google">Google Research</a>, Remote, May. 2021 &ndash; Aug. 2021<br />
 </li>
 <li><p><b>Research Intern</b>, <a href="http://petuum.com">Petuum</a>, Pittsburgh, PA, May. 2018 &ndash; Dec. 2018<br />
