--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ My research interests include topics in machine learning and optimization. My go
        </li>
 </ul> -->
 
-<h2>Publications [<a href="https://scholar.google.com/citations?user=bZ9oyW8AAAAJ&hl=zh-CN&oi=ao">Google Scholar</a>]</h2> 
-
+<h2>Publications [<a href="https://scholar.google.com/citations?user=bZ9oyW8AAAAJ&hl=zh-CN&oi=ao">Google Scholar</a>] </h2> 
+       (*: equal contribution)
 <!-- <h3>Preprints</h3>
 <ul>
 <li><p><i>Saving Gradient and Negative Curvature Computations: Finding Local Minima More Efficiently</i>.<br /> 
@@ -51,31 +51,31 @@ My research interests include topics in machine learning and optimization. My go
 <!-- <h3>Conference Proceedings</h3> -->
 <ul>
 <li><p><i>Predicting Out-of-Distribution Error with the Projection Norm</i>.<br />
-<b>Yaodong Yu</b>*, Zitong Yang*, Alexander Wei, Yi Ma, Jacob Steinhardt (*: equal contribution). <br />  
+<b>Yaodong Yu</b>*, Zitong Yang*, Alexander Wei, Yi Ma, Jacob Steinhardt. <br />  
 In Proc. of the 39th International Conference on Machine Learning (ICML'2022), 2022. [<a href="https://proceedings.mlr.press/v162/yu22i.html">Link</a>] [<a href="https://proceedings.mlr.press/v162/yu22i/yu22i.pdf">PDF</a>] [<a href="https://github.com/yaodongyu/ProjNorm">code</a>] <br /></p>
 </li>
 </ul>
 <ul>
 <li><p><i>Online Nonsubmodular Minimization with Delayed Costs: From Full Information to Bandit Feedback</i>.<br />
-Tianyi Lin*, Aldo Pacchiano*, <b>Yaodong Yu</b>*, Michael I. Jordan (*: equal contribution). <br />  
+Tianyi Lin*, Aldo Pacchiano*, <b>Yaodong Yu</b>*, Michael I. Jordan. <br />  
 In Proc. of the 39th International Conference on Machine Learning (ICML'2022), 2022. [<a href="https://proceedings.mlr.press/v162/lin22g.html">Link</a>] [<a href="https://proceedings.mlr.press/v162/lin22g/lin22g.pdf">PDF</a>]  <br /></p>
 </li>
 </ul>
 <ul>
 <li><p><i>ReduNet: A White-box Deep Network from the Principle of Maximizing Rate Reduction</i>.<br />
-Kwan Ho Ryan Chan*, <b>Yaodong Yu</b>*, Chong You*, Haozhi Qi, John Wright, Yi Ma (*: equal contribution). <br />  
+Kwan Ho Ryan Chan*, <b>Yaodong Yu</b>*, Chong You*, Haozhi Qi, John Wright, Yi Ma. <br />  
 Journal of Machine Learning Research (JMLR'2022), 2022. [<a href="https://arxiv.org/abs/2105.10446">arXiv</a>] [<a href="https://www.jmlr.org/papers/v23/21-0631.html">Link</a>] [<a href="https://arxiv.org/pdf/2105.10446.pdf">PDF</a>]  [<a href="https://github.com/Ma-Lab-Berkeley/ReduNet">code</a>] <br /></p>
 </li>
 </ul>
 <ul>
 <li><p><i>Fast Distributionally Robust Learning with Variance-Reduced Min-Max Optimization</i>.<br />
-<b>Yaodong Yu</b>*, Tianyi Lin*, Eric Mazumdar*, Michael I. Jordan (*: equal contribution). <br />  
+<b>Yaodong Yu</b>*, Tianyi Lin*, Eric Mazumdar*, Michael I. Jordan. <br />  
 In Proc. of the 25nd of the International Conference on Artificial Intelligence and Statistics (AISTATS'2022), 2022. [<a href="https://proceedings.mlr.press/v151/yu22a">Link</a>] [<a href="https://proceedings.mlr.press/v151/yu22a/yu22a.pdf">PDF</a>] <br /></p>
 </li>
 </ul>
 <ul>
 <li><p><i>On the Convergence of Stochastic Extragradient for Bilinear Games with Restarted Iteration Averaging</i>.<br />
-Chris Junchi Li*, <b>Yaodong Yu</b>*, Nicolas Loizou, Gauthier Gidel, Yi Ma, Nicolas Le Roux, Michael I. Jordan (*: equal contribution). <br />  
+Chris Junchi Li*, <b>Yaodong Yu</b>*, Nicolas Loizou, Gauthier Gidel, Yi Ma, Nicolas Le Roux, Michael I. Jordan. <br />  
 In Proc. of the 25nd of the International Conference on Artificial Intelligence and Statistics (AISTATS'2022), 2022. [<a href="https://proceedings.mlr.press/v151/junchi-li22a.html">Link</a>] [<a href="https://proceedings.mlr.press/v151/junchi-li22a/junchi-li22a.pdf">PDF</a>] <br /></p>
 </li>
 </ul>
@@ -84,7 +84,7 @@ In Proc. of the 25nd of the International Conference on Artificial Intelligence 
 </li>
 </ul>
 <ul>
-<li><p><i>Learning Diverse and Discriminative Representations via the Principle of Maximal Coding Rate Reduction</i>.<br />  <b>Yaodong Yu</b>*, Kwan Ho Ryan Chan*, Chong You, Chaobing Song, Yi Ma (*: equal contribution).<br />  In Proc. of the 34th Conference on Advances in Neural Information Processing Systems (NeurIPS'2020), 2020. [<a href="https://arxiv.org/abs/2006.08558">arXiv</a>] [<a href="https://proceedings.neurips.cc/paper/2020/hash/6ad4174eba19ecb5fed17411a34ff5e6-Abstract.html">Link</a>] [<a href="https://proceedings.neurips.cc/paper/2020/file/6ad4174eba19ecb5fed17411a34ff5e6-Paper.pdf">PDF</a>] [<a href="https://github.com/ryanchankh/mcr2">code</a>] <br /></p>
+<li><p><i>Learning Diverse and Discriminative Representations via the Principle of Maximal Coding Rate Reduction</i>.<br />  <b>Yaodong Yu</b>*, Kwan Ho Ryan Chan*, Chong You, Chaobing Song, Yi Ma.<br />  In Proc. of the 34th Conference on Advances in Neural Information Processing Systems (NeurIPS'2020), 2020. [<a href="https://arxiv.org/abs/2006.08558">arXiv</a>] [<a href="https://proceedings.neurips.cc/paper/2020/hash/6ad4174eba19ecb5fed17411a34ff5e6-Abstract.html">Link</a>] [<a href="https://proceedings.neurips.cc/paper/2020/file/6ad4174eba19ecb5fed17411a34ff5e6-Paper.pdf">PDF</a>] [<a href="https://github.com/ryanchankh/mcr2">code</a>] <br /></p>
 </li>
 </ul>
 <ul>
@@ -92,7 +92,7 @@ In Proc. of the 25nd of the International Conference on Artificial Intelligence 
 </li>
 </ul>
 <ul>
-<li><p><i>Rethinking Bias-Variance Trade-off for Generalization of Neural Networks</i>.<br /> Zitong Yang*, <b>Yaodong Yu</b>*, Chong You, Jacob Steinhardt, and Yi Ma (*: equal contribution).<br />  In Proc. of the 37th International Conference on Machine Learning (ICML'2020), 2020. [<a href="https://arxiv.org/abs/2002.11328">arXiv</a>] [<a href="https://proceedings.mlr.press/v119/yang20j">Link</a>] [<a href="http://proceedings.mlr.press/v119/yang20j/yang20j.pdf">PDF</a>] [<a href="https://github.com/yaodongyu/Rethink-BiasVariance-Tradeoff">code</a>] <br /></p>
+<li><p><i>Rethinking Bias-Variance Trade-off for Generalization of Neural Networks</i>.<br /> Zitong Yang*, <b>Yaodong Yu</b>*, Chong You, Jacob Steinhardt, and Yi Ma.<br />  In Proc. of the 37th International Conference on Machine Learning (ICML'2020), 2020. [<a href="https://arxiv.org/abs/2002.11328">arXiv</a>] [<a href="https://proceedings.mlr.press/v119/yang20j">Link</a>] [<a href="http://proceedings.mlr.press/v119/yang20j/yang20j.pdf">PDF</a>] [<a href="https://github.com/yaodongyu/Rethink-BiasVariance-Tradeoff">code</a>] <br /></p>
 </li>
 </ul>
 <ul>
@@ -101,19 +101,19 @@ In Proc. of the 25nd of the International Conference on Artificial Intelligence 
 </ul>
 <ul>
 <li><p><i>Learning One-hidden-layer ReLU Networks via Gradient Descent</i>.<br /> 
-Xiao Zhang*, <b>Yaodong Yu</b>*, Lingxiao Wang* and Quanquan Gu (*: equal contribution). <br /> 
+Xiao Zhang*, <b>Yaodong Yu</b>*, Lingxiao Wang* and Quanquan Gu. <br /> 
 In Proc. of the 22nd International Conference on Artificial Intelligence and Statistics (AISTATS'2019), Naha, Okinawa, Japan, 2019. [<a href="http://proceedings.mlr.press/v89/zhang19g">Link</a>] [<a href="http://proceedings.mlr.press/v89/zhang19g/zhang19g.pdf">PDF</a>]
 </li>
 </ul>
 <ul>
 <li><p><i>Third-order Smoothness Helps: Faster Stochastic Optimization Algorithms for Finding Local Minima</i>.<br /> 
-<b>Yaodong Yu</b>*, Pan Xu* and Quanquan Gu (*: equal contribution).<br />
+<b>Yaodong Yu</b>*, Pan Xu* and Quanquan Gu.<br />
 In Proc. of the 32nd Conference on Advances in Neural Information Processing Systems (NeurIPS'2018), Montréal, Canada, 2018. [<a href="http://papers.nips.cc/paper/7704-third-order-smoothness-helps-faster-stochastic-optimization-algorithms-for-finding-local-minima">Link</a>] [<a href="http://papers.nips.cc/paper/7704-third-order-smoothness-helps-faster-stochastic-optimization-algorithms-for-finding-local-minima.pdf">PDF</a>][<a href="files_pdf/poster_FLASH.pdf">Poster</a>] <br /></p>
 </li>
 </ul>
 <ul>
 <li><p><i>A Primal-Dual Analysis of Global Optimality in Nonconvex Low-Rank Matrix Recovery</i>.<br /> 
-Xiao Zhang*, Lingxiao Wang*, <b>Yaodong Yu</b> and Quanquan Gu (*: equal contribution).<br />
+Xiao Zhang*, Lingxiao Wang*, <b>Yaodong Yu</b> and Quanquan Gu.<br />
 In Proc. of the 35th International Conference on Machine Learning (ICML'2018), Stockholm, Sweden, 2018. [<a href="http://proceedings.mlr.press/v80/zhang18m.html">Link</a>] [<a href="http://proceedings.mlr.press/v80/zhang18m/zhang18m.pdf">PDF</a>]<br /></p>
 </li>
 </ul>
@@ -125,7 +125,7 @@ In Proc. of the 32nd AAAI Conference on Artificial Intelligence (AAAI'2018), New
 </ul>
 <ul>
 <li><p><i>Communication-Efficient Distributed Primal-Dual Algorithm for Saddle Point Problems</i>.<br /> 
-<b>Yaodong Yu</b>*, Sulin Liu* and Sinno Jialin Pan (*: equal contribution).<br />
+<b>Yaodong Yu</b>*, Sulin Liu* and Sinno Jialin Pan.<br />
 In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2017), Sydney, Australia, 2017. [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">Link</a>] [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">PDF</a>]<br /></p>
 </li>
 </ul>
